// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination render page items should render page items 1 -> 5 1`] = `
<div>
  <div>
    <div>
      <a
        href="1"
        id="page_first"
        onClick={[Function]}
      >
        first
      </a>
      <a
        href="1"
        id="page_1"
        onClick={[Function]}
      >
        1
      </a>
      <a
        href="2"
        id="page_2"
        onClick={[Function]}
      >
        2
      </a>
      <a
        href="3"
        id="page_3"
        onClick={[Function]}
      >
        3
      </a>
      <a
        href="4"
        id="page_4"
        onClick={[Function]}
      >
        4
      </a>
      <a
        href="5"
        id="page_5"
        onClick={[Function]}
      >
        5
      </a>
      <a
        href="2"
        id="page_next"
        onClick={[Function]}
      >
        &gt;
      </a>
      <a
        href="9"
        id="page_last"
        onClick={[Function]}
      >
        last
      </a>
    </div>
  </div>
</div>
`;

exports[`Pagination render page items should render page items 2 -> 6 1`] = `
<div>
  <div>
    <div>
      <a
        href="1"
        id="page_first"
        onClick={[Function]}
      >
        first
      </a>
      <a
        href="3"
        id="page_prev"
        onClick={[Function]}
      >
        &lt;
      </a>
      <a
        href="2"
        id="page_2"
        onClick={[Function]}
      >
        2
      </a>
      <a
        href="3"
        id="page_3"
        onClick={[Function]}
      >
        3
      </a>
      <a
        href="4"
        id="page_4"
        onClick={[Function]}
      >
        4
      </a>
      <a
        href="5"
        id="page_5"
        onClick={[Function]}
      >
        5
      </a>
      <a
        href="6"
        id="page_6"
        onClick={[Function]}
      >
        6
      </a>
      <a
        href="5"
        id="page_next"
        onClick={[Function]}
      >
        &gt;
      </a>
      <a
        href="9"
        id="page_last"
        onClick={[Function]}
      >
        last
      </a>
    </div>
  </div>
</div>
`;
